syntax="proto2";
package example;

option cc_generic_services = true;

message EchoRequest {
      required string message = 1;
      optional int32 ID = 2;
};

message EchoResponse {
      required string message = 1;
};

service EchoService {
      rpc Echo(EchoRequest) returns (EchoResponse);
      rpc EchoStream(stream EchoRequest) returns (stream EchoResponse);
      rpc MatchEchoStream(stream MatchEchoRequest) returns (stream MatchEchoResponse);
};

message MatchEchoRequest {
      required int32 clientId = 1;
      required int32 userId = 2;
      optional string userName = 3;
      repeated int32 petList = 4;
};

message MatchEchoResponse {
      required int32 userId = 1;
      optional string userName = 2;
      optional int32 result = 3;
};

